...
fun PickerScreen(
    goToWardrobe: () -> Unit,
    getItemPhotoByPhotoFilename: (itemId: String) -> Bitmap?,
    currentSelection: List<Item>,
    changeSelectedItem: (category: Category, next: Boolean) -> Unit,
    drawSelection: () -> Unit,
    saveOutfit: () -> Boolean?,
    goToSettings: () -> Unit
) {
    val scaffoldState: ScaffoldState = rememberScaffoldState()
    val coroutineScope: CoroutineScope = rememberCoroutineScope()

    Scaffold(
...
                    backgroundColor = MaterialTheme.colors.background,
                    contentColor = MaterialTheme.colors.primary,
                    snackbarData = data,
                    shape = MaterialTheme.shapes.medium,
                    modifier = Modifier
                        .padding(horizontal = 20.dp)
                        .testTag("snackBarInfo")
                )
            }
        }

    )

...
            Box(contentAlignment = Alignment.Center, modifier = Modifier
                .align(Alignment.CenterHorizontally)
                .fillMaxSize()
                .padding(bottom = 75.dp)
                .testTag("emptySelection")
            ) {
                Text(text = "You have to draw your items first")
                GifImage(gif = R.drawable.down, modifier = Modifier
                    .size(100.dp)
                    .align(Alignment.BottomStart))
            }

        }
...

            MasterButton(
                onClick = drawSelection,
                icon = R.drawable.dice,
                modifier = Modifier
                    .weight(1f, fill = true)
                    .testTag("drawButton"),
                text = "DRAW",
                fontSize = 15.sp
            )

            MasterButton(
                type = ButtonType.WHITE,
...
